<resources>

    <string name="app_name">My Half</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="title_dashboard">dashboard</string>
    <string name="title_notifications">notifications</string>
    <string name="title_activity_log_in">logIn</string>
    <string name="log_in_Button" translatable="false">Log in</string>
    <string name="email">Email</string>
    <string name="radioButtonMan">Man</string>
    <string name="radioButtonWoman">Woman</string>
    <string name="birthday">Birthday</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="matchmakerButton">Registration for matchmakers</string>
    <string name="loginButtob">Login</string>
    <string name="bRegistered">Created already? click here</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="city">city</string>
    <string name="forRegistering">Register</string>
    <string name="fillVariable">Please complete all fields</string>
    <string name="start_search">Start searching</string>
    <string name="witness">Witness</string>
    <string name="view">View</string>
    <string name="age">Age</string>
    <string name="more_details">More details</string>


    <string name="title_section1" translatable="false">Section 1</string>
    <string name="title_section2" translatable="false">Section 2</string>
    <string name="title_section3" translatable="false">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example" translatable="false">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_draw" translatable="false">NavigationDraw</string>
    <string name="title_home">home</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="status">Status</string>
    <string name="RegisterAsMatch">Register as match maker</string>

    <string name="registrationDone">Registration was done</string>
    <string name="MALE">Male</string>
    <string name="FEMALE">Female</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="AllOptions">All options</string>
    <string name="single">Single</string>
    <string name="widow">Widow</string>
    <string name="DivorcedWithChildren">Divorced with children</string>
    <string name="WidowWithChildren">Widow with children</string>
    <string name="fromAge">From age</string>


    <string-array name="ViewArray">
        <item>Traditional</item>
        <item>Religious</item>
        <item>National Religious</item>
        <item>Religious national Torah</item>
        <item>Orthodox</item>
        <item>Modern Orthodox</item>
        <item>Breslev</item>
        <item>Chabad</item>
        <item>newly religious</item>
        <item>Light Religious</item>
        <item>Secular</item>
    </string-array>

    <string-array name="StatusArrayForMan">
        <item>@string/single</item>
        <item>@string/divorcee</item>
        <item>@string/widower</item>
    </string-array>


    <string-array name="StatusArrayForWoman">
        <item>@string/single</item>
        <item>@string/divorcee</item>
        <item>@string/widower</item>
    </string-array>

    <string-array name="WitnessArray">
        <item>Ashkenazic</item>
        <item>Testimony of the east</item>
        <item>Yemenite</item>
        <item>Russian</item>
        <item>French</item>
        <item>Ethiopian</item>
        <item>American</item>
    </string-array>

    <string-array name="livingAreaArray">
        <item>ירושלים והסביבה</item>
        <item>מרכז וגוש דן</item>
        <item>שרון</item>
        <item>צפון</item>
        <item>דרום</item>
        <item>יהודה ושומרון</item>
    </string-array>

    <string name="toAge" translatable="false">To age</string>
    <string name="go_to_search">Strat search</string>
    <string name="search">Search</string>
    <string name="toHeight">To height</string>
    <string name="fromHeight">From Height</string>
    <string name="details">Details</string>
    <string name="height">Height</string>
    <string name="about_me">About me</string>
    <string name="without_children">Without children</string>
    <string name="with_children">With children</string>
    <string name="select_image">Select Image</string>

    <string name="cancel">cancel</string>
    <string name="ok">OK</string>
    <string name="Language">Language</string>
    <string name="long_text_policy">Your Text</string>
    <string name="hebrew">Hebrew</string>
    <string name="English">English</string>
    <string name="all_users_and_matches">All users and matchmakers</string>
    <string name="save">Save</string>
    <string name="get_nfn_when">Get notifications when</string>
    <string name="send_me_msg">Send me a message</string>
    <string name="whtch_my_card">Watch my card</string>
    <string name="who_can_see_my_card">Who can see my card</string>
    <string name="by_choice">By choice</string>
    <string name="deleteFreeze_account">Delete \\ Freeze account</string>
    <string name="get_takanon">I confirm that I have read and I agree to the</string>
    <string name="takanon">Rules</string>
    <string name="from_mm_card">From memory cad</string>
    <string name="from_camera">From camera</string>
    <string name="setting">Setting</string>
    <string name="livingArea">Living area</string>
    <string name="title_activity_delete_account" translatable="false">Delte Account</string>
    <string name="PhoneNum">Phone num</string>
    <string name="range">Range</string>
    <string name="divorcee">Divorcee</string>
    <string name="widower">Widower</string>
    <string name="wSingle">Widow</string>
    <string name="wDivorcee">Divorcee</string>
    <string name="start_searching">start searching</string>

    <!--<string-array name="WitnessArray">-->
        <!--<item>אשכנזי</item>-->
        <!--<item>עדות המזרח</item>-->
        <!--<item>תימני</item>-->
        <!--<item>רוסי</item>-->
        <!--<item>צרפתי</item>-->
        <!--<item>אתיופי</item>-->
        <!--<item>אמריקאי</item>-->
    <!--</string-array>-->

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">com.myhalf</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbcom.myhalf</string>
    <string name="default_web_client_id_auth" translatable="false">702829829190-vh6doa6cntd4qer6v7dlaekmvfdva960.apps.googleusercontent.com</string>
    R.string.long_text_policy
</resources>
