<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editProfileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4e4e4"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="420dp"
                    android:layout_margin="15dp"
                    android:background="#ffffff"
                    android:elevation="6dp"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/ivMainPicture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="0dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/student" />

                </FrameLayout>
            </LinearLayout>



            <!--<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_margin="15dp"-->
                <!--app:cardCornerRadius="10dp"-->
                <!--app:cardElevation="4dp"-->
                <!--app:cardUseCompatPadding="true">-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/details"
                        android:gravity="start"
                        android:background="@color/blue_primary_male"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_bordered"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvName"
                            android:text="שם"
                            style="@style/TextViewOfProfile" />

                        <TextView
                            android:id="@+id/tvAge"
                            style="@style/TextViewOfProfile"
                            android:text="גיל " />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tvStatus"
                            style="@style/TextViewOfProfile"
                            android:text="משפחתי " />

                        <TextView
                            android:id="@+id/tvView"
                            style="@style/TextViewOfProfile"
                            android:text="@string/view"/>

                        <TextView
                            android:id="@+id/tvHeight"
                            style="@style/TextViewOfProfile"
                            android:text="@string/height"/>
                    </LinearLayout>


                    <TextView
                        android:id="@+id/tvCity"
                        style="@style/TextViewOfProfile"
                        android:text="@string/city" />


                    <TextView
                        android:id="@+id/tvWitness"
                        style="@style/TextViewOfProfile"
                        android:text="@string/witness" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="על עצמי"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@color/blue_primary_male"/>

                <TextView
                    android:id="@+id/tvFreeDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="free description"
                    android:textSize="15sp" />



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="25sp">

                        <Button
                            android:id="@+id/bToChat"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="20dp"
                            android:background="@color/blue_primary_male"
                            android:padding="15dp"
                            android:text="@string/send_msg"
                            android:textColor="#ffffff" />

                        <Button
                            android:id="@+id/bChangeDetails"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp"
                            android:layout_marginLeft="40dp"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="20dp"
                            android:background="#ffb8b8"
                            android:padding="15dp"
                            android:text="Change details"
                            android:textColor="#ffffff"
                            android:visibility="gone" />


                </LinearLayout>
            <!--</android.support.v7.widget.CardView>-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>